# Calendar

./: package-lock.json  package.json
back/: pyproject.toml
calendar_back/: pyproject.toml
calendar_back/comments/: admin.py  models.py  serializers.py  urls.py  views.py
calendar_back/comments/migrations/: 0001_initial.py  0002_alter_comment_author_alter_comment_schedule.py  0002_initial.py
calendar_back/config/: settings.py  urls.py
calendar_back/nicknames/: admin.py  apps.py  models.py
calendar_back/nicknames/migrations/: 0001_initial.py  0002_initial.py  0002_nickname_user.py
calendar_back/schedules/: admin.py  models.py  serializers.py
calendar_back/schedules/migrations/: 0001_initial.py  0002_alter_schedule_end_date_alter_schedule_repeat_and_more.py  0002_initial.py  0003_initial.py  0003_schedule_team_schedule_user.py
calendar_back/teams/: admin.py  models.py
calendar_back/teams/migrations/: 0001_initial.py  0002_initial.py  0002_remove_team_members_team_members.py
calendar_back/users/: admin.py  models.py  serializers.py  urls.py  views.py
calendar_back/users/migrations/: 0001_initial.py  0002_user_name.py  0003_alter_user_name.py
calendar_front/: .prettierrc.js  package-lock.json  package.json
calendar_front/public/: index.html
calendar_front/src/: App.js  GlobalStyles.js  api.js  index.js  recoilState.js  routes.js
calendar_front/src/components/: CustomTuiCalendar.js  DateRangePicker.js  Header.js  Login.js  Signup.js  styles.css
calendar_front/src/screens/: Landing.js  Layout.js  Login.js  LoginSignup.css  LoginSignup.js  Main.js  (+4 more)
(+24 files in other folders)
